cluster/apps/home/grist/grist-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grist
  namespace: home
spec:
  selector:
    matchLabels:
      app: grist
  replicas: 1
  template:
    metadata:
      labels:
        app: grist
    spec:
      containers:
        - name: grist
          image: gristlabs/grist
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: grist-storage
              mountPath: /persist
      volumes:
        - name: grist-storage
          persistentVolumeClaim:
            claimName: grist-storage
---
apiVersion: v1
kind: Service
metadata:
  name: grist
  namespace: home
  labels:
    name: grist
spec:
  type: ClusterIP
  ports:
    - name: grist
      port: 8484
  selector:
    app: grist
