cluster/apps/home/grist/grist-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grist
  namespace: home
  annotations:
    hajimari.io/group: "home"
    hajimari.io/enable: "true"

spec:
  ingressClassName: nginx-private
  rules:
    - host: grist.${SECRET_PRIVATE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grist
                port:
                  number: 8484
